<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.TaskRegister.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.TaskRegister.ui.filter.FilterFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_filters" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.TaskRegister.ui.statistics.StatisticsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_finished_tasks"
        android:name="com.example.TaskRegister.ui.fourth_fragment.FinishedTasksFragment"
        android:label="@string/menu_pendientes_terminados"
        tools:layout="@layout/fragment_finished_tasks" />
</navigation>