<?xml version="1.0" encoding="utf-8"?>

<!--Archivo utilizado para registrar los pendientes. También, se usa para actualizarlos o
    borrarlos-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterData">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="250dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="#FFFFFF"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/register_tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/register_tv1_nombre"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/register_taskName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="0"
                    android:ems="10"
                    android:hint="@string/register_te1_taskName"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences"
                    android:textColor="#000000"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/register_tv2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/register_tv2_description"
                    android:textColor="#000000"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="#FFFFFF"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/register_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/register_te2_descriptionHint"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|textCapSentences"

                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/register_tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/register_tv3_status"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/register_spinner_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/register_tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/register_tv4_category"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/register_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_marginLeft="5dp"
                    android:ems="8"
                    android:hint="@string/register_te5_categoryHint"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords" />

                <Spinner
                    android:layout_marginLeft="10dp"
                    android:id="@+id/register_spinner_category"
                    android:layout_width="30sp"
                    android:layout_height="40sp"

                    android:layout_weight="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/register_tv5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="start"
                    android:text="@string/register_tv5_priority"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/register_spinner_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="0" />

            </LinearLayout>

            <TextView
                android:id="@+id/register_tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/register_tv6_date"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/register_tv10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="30"
                    android:text="DD/MM/YY"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/register_calendar_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    app:srcCompat="@android:drawable/ic_menu_today" />

                <Button
                    android:id="@+id/register_todayButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="30"
                    android:onClick="buttonToday"
                    android:text="@string/register_buttonToday" />

                <Button
                    android:id="@+id/register_date_remove"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="X"
                    android:textSize="18sp"
                    app:backgroundTint="#E36C6C"
                    app:cornerRadius="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/register_tv7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="40"
                    android:text="@string/register_tv7_responsibles"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/register_remove_responsibles"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0"
                    android:text="X"
                    android:textSize="18sp"
                    app:backgroundTint="#E36C6C"
                    app:cornerRadius="20dp" />

                <Spinner
                    android:id="@+id/register_add_responsible"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|left"
                    android:layout_weight="0" />

            </LinearLayout>

            <EditText
                android:id="@+id/register_responsibles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="60"
                android:ems="10"
                android:hint="@string/register_te6_responsiblesHint"
                android:importantForAutofill="no"
                android:inputType="textCapWords" />

            <Button
                android:id="@+id/register_btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:onClick="registerInformation"
                android:text="@string/register_btn2_save" />

            <TextView
                android:id="@+id/register_tv8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/register_tv8_dateCreated"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/register_tv9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/register_tv8_dateModified"
                android:textSize="18sp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/register_btn_update"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_weight="1"
                    android:onClick="onClickBtnUpdate"
                    android:text="@string/register_btn3_update"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/register_btn_delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickBtnDelete"
                    android:text="@string/register_btn4_delete"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>